# PostgreSQL/routes/api.php
@@ -19,16 +19,8 @@ use Illuminate\Support\Facades\Route;
  *     )
  * )
  */
-/**
- * @OA\Schema(
- *     schema="Product",
- *     type="object",
- *     required={"name", "price", "thumb"},
- *     @OA\Property(property="name", type="string", example="Product Name"),
- *     @OA\Property(property="price", type="number", format="float", example=29.99),
- *     @OA\Property(property="thumb", type="string", example="/images/product-thumb.jpg")
- * )
- */
+
+
 Route::get('add', [ProductController::class, 'create']);
 Route::post('add', [ProductController::class, 'store']);
 Route::get('list', [ProductController::class, 'index']);
@@ -36,3 +28,6 @@ Route::get('edit/{id}', [ProductController::class, 'show'])->name('edit');
 Route::put('edit/{id}', [ProductController::class, 'update']);
 Route::delete('destroy', [ProductController::class, 'destroy']);
 Route::post('upload/services', [UploadController::class, 'store']);
+
+Route::get('/Products', [ProductController::class, 'index']);
+
